@@ -65,8 +65,19 @@ endif
 
 libevil_la_CPPFLAGS = @win32_cppflags@
 libevil_la_CFLAGS = @win32_cflags@
-libevil_la_CXXFLAGS = -fno-rtti -fno-exceptions
+libevil_la_CXXFLAGS = @win32_cxxflags@
 libevil_la_LIBADD = @win32_libs@ $(EFL_MPATROL_LIBS)
-libevil_la_LDFLAGS = -no-undefined -Wl,--enable-auto-import -version-info @version_info@
+libevil_la_LDFLAGS = -no-undefined -Wl,--enable-auto-import -version-info @version_info@ 
+
+if EVIL_HAVE_WINCE
+
+libevil_la_LINK = $(LINK) $(libevil_la_LDFLAGS)
+
+else
+
+libevil_la_LINK = $(CXXLINK) $(libevil_la_LDFLAGS)
+
+endif
+
 
 EXTRA_DIST = evil_private.h evil_fnmatch_private.h
